fix: resolve the flickering of the theme on mount

--- a/src/global/index.css
+++ b/src/global/index.css
@@ -12,6 +12,10 @@
   -webkit-tap-highlight-color: transparent;
 }
 
+html {
+  color-scheme: dark light;
+}
+
 body {
   width: min(80rem, 100% - 2.5rem);
   margin-inline: auto;
